--- a/sass/style.scss
+++ b/sass/style.scss
@@ -181,7 +181,7 @@ body {
             }
         }
         .actividad {
-            background-color: #ff9900;
+            background-color: green;
             display: flex;
             flex-direction: column;
             border-radius: 25px;
