--- a/sass/style.css
+++ b/sass/style.css
@@ -261,7 +261,7 @@ body {
     border: black solid 2px;
   }
   .sectionNosotros .actividad {
-    background-color: #ff9900;
+    background-color: green;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
