--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -69,7 +69,10 @@
       </div>
       <div class="actividad animate__animated animate__bounceInRight">
         <h2><strong>¿QUE HACEMOS?</strong></h2>
-        <img src="../img/Actividad.jpg" alt="actividad">
+        <div class="img">
+          <img src="../img/Actividad.jpg" alt="actividad" class="img_act1">
+          <img src="../img/HomeSlider/5.png" alt="actividad" class="img_act2">
+        </div>
         <p>
           La actividad que realizamos es totalmente voluntaria, los recursos económicos necesarios para llevar adelante los objetivos que les proponemos a nuestros beneficiarios, deben ser gestionados y generados por nosotros mismos, apelando al apoyo y el trabajo incondicional del conjunto de Padres, junto a sus hijos y los educadores adultos, con la premisa que ningún niño ni joven deje de asistir por problemas que puedan tener una solución, siempre buscada en conjunto.
           Nuestro medio es la educación no formal y propiciamos que jóvenes y adultos compartan la tarea del crecimiento común en una relación que fomente el diálogo, la comprensión y la participación. Asumimos el desafío de que los jóvenes tengan un protagonismo en la historia como ciudadanos responsables, animadores del cambio comunitario, constructores de un mundo mejor.
