--- a/sass/style.css
+++ b/sass/style.css
@@ -214,7 +214,7 @@ body {
     padding: 5px;
   }
   .sectionNosotros .fundacion {
-    background-color: #ffff1a;
+    background-color: green;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -227,7 +227,9 @@ body {
     padding: 15px;
   }
   .sectionNosotros .fundacion h2 {
-    font-family: "Permanent Marker", cursive;
+    color: white;
+    font-size: 35px;
+    font-family: "Estonia", cursive, bold;
     text-align: center;
     -ms-grid-column-align: center;
         justify-self: center;
@@ -274,15 +276,17 @@ body {
     padding: 15px;
   }
   .sectionNosotros .actividad h2 {
-    font-family: "Permanent Marker", cursive;
+    color: white;
+    font-size: 35px;
+    font-family: "Estonia", cursive, bold;
     text-align: center;
     -ms-grid-column-align: center;
         justify-self: center;
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
-    margin-top: 25px auto;
     text-decoration: underline;
+    margin: 15px auto;
   }
   .sectionNosotros .actividad p {
     font-family: "Ubuntu", sans-serif;
@@ -296,19 +300,19 @@ body {
     -ms-grid-column-align: center;
         justify-self: center;
   }
-  .sectionNosotros .actividad img {
+  .sectionNosotros .actividad .img {
     -webkit-box-ordinal-group: 4;
         -ms-flex-order: 3;
             order: 3;
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
-    -ms-grid-column-align: center;
-        justify-self: center;
-    width: 90vw;
+  }
+  .sectionNosotros .actividad .img .img_act1 {
+    width: 88vw;
     height: 12rem;
     border-radius: 25px;
     border: black solid 2px;
+  }
+  .sectionNosotros .actividad .img .img_act2 {
+    display: none;
   }
   .sectionNosotros .historia {
     background-size: cover;
@@ -722,19 +726,19 @@ body {
     padding: 10px;
   }
   .sectionNosotros .fundacion {
-    background-color: #ffff1a;
+    background-color: green;
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: 18rem 2fr;
         grid-template-columns: 18rem 2fr;
-    -ms-grid-rows: 30px 1fr;
-        grid-template-rows: 30px 1fr;
+    -ms-grid-rows: 50px 1fr;
+        grid-template-rows: 50px 1fr;
     border-radius: 25px;
     margin: 20px 30px;
     padding: 15px;
   }
   .sectionNosotros .fundacion h2 {
-    font-family: "Permanent Marker", cursive;
+    font-family: "Estonia", cursive, bold;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-column: 1/3;
@@ -747,8 +751,10 @@ body {
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
-    margin-top: 25px;
+    margin: 25px auto;
     text-decoration: underline;
+    color: white;
+    font-size: 45px;
   }
   .sectionNosotros .fundacion p {
     -ms-flex-item-align: center;
@@ -764,9 +770,10 @@ body {
     grid-row: 2/3;
     font-family: "Ubuntu", sans-serif;
     color: black;
-    padding: 25px;
-    font-size: 25px;
+    padding: 20px;
+    font-size: 20px;
     text-align: justify;
+    margin: 0;
   }
   .sectionNosotros .fundacion img {
     -ms-flex-item-align: center;
@@ -780,24 +787,24 @@ body {
     -ms-grid-row: 2;
     -ms-grid-row-span: 1;
     grid-row: 2/3;
-    width: 15rem;
+    width: 12rem;
     border-radius: 10px;
     border: black solid 2px;
   }
   .sectionNosotros .actividad {
-    background-color: #ff9900;
+    background-color: green;
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 2fr 30rem;
-        grid-template-columns: 2fr 30rem;
-    -ms-grid-rows: 20px 1fr;
-        grid-template-rows: 20px 1fr;
+    -ms-grid-columns: 3fr;
+        grid-template-columns: 3fr;
+    -ms-grid-rows: 50px 1fr 330px;
+        grid-template-rows: 50px 1fr 330px;
     border-radius: 25px;
     margin: 20px 30px;
     padding: 10px;
   }
   .sectionNosotros .actividad h2 {
-    font-family: "Permanent Marker", cursive;
+    font-family: "Estonia", cursive, bold;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-column: 1/3;
@@ -810,9 +817,11 @@ body {
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
-    margin-top: 25px;
+    margin: 25px auto;
     margin-bottom: 15px;
     text-decoration: underline;
+    color: white;
+    font-size: 45px;
   }
   .sectionNosotros .actividad p {
     -ms-grid-column: 1;
@@ -823,31 +832,37 @@ body {
     grid-row: 2/3;
     font-family: "Ubuntu", sans-serif;
     color: black;
-    padding: 25px;
-    font-size: 25px;
+    padding: 20px;
+    font-size: 20px;
     text-align: justify;
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
     -ms-grid-column-align: center;
         justify-self: center;
+    margin: 0;
   }
   .sectionNosotros .actividad img {
+    width: 30rem;
+    height: 20rem;
+    border-radius: 10px;
+    border: black solid 2px;
+  }
+  .sectionNosotros .actividad .img {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
     -ms-grid-column-align: center;
         justify-self: center;
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2/3;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2/3;
-    width: 30rem;
-    height: 20rem;
-    border-radius: 10px;
-    border: black solid 2px;
+  }
+  .sectionNosotros .actividad .img .img_act2 {
+    margin-left: 20px;
   }
   .historia {
     background-image: url(../img/FondoLidPresente2.png);
