--- a/sass/style.scss
+++ b/sass/style.scss
@@ -145,7 +145,7 @@ body {
         padding: 5px;
 
         .fundacion {
-            background-color: #ffff1a;
+            background-color: green;
             display: flex;
             flex-direction: column;
             border-radius: 25px;
@@ -153,7 +153,9 @@ body {
             padding: 15px;
 
             & h2 {
-                font-family: $font-encabezado;
+                color: white;
+                font-size: 35px;
+                font-family: $font-titulo;
                 text-align: center;
                 justify-self: center;
                 align-self: center;
@@ -189,12 +191,14 @@ body {
             padding: 15px;
 
             & h2 {
-                font-family: $font-encabezado;
+                color: white;
+                font-size: 35px;
+                font-family: $font-titulo;
                 text-align: center;
                 justify-self: center;
                 align-self: center;
-                margin-top: 25px auto;
                 text-decoration: underline;
+                margin: 15px auto;
             }
 
             & p {
@@ -208,14 +212,20 @@ body {
 
             }
 
-            & img {
+            .img {
                 order: 3;
-                align-self: center;
-                justify-self: center;
-                width: 90vw;
-                height: 12rem;
-                border-radius: 25px;
-                border: black solid 2px;
+
+                .img_act1 {
+                    width: 88vw;
+                    height: 12rem;
+                    border-radius: 25px;
+                    border: black solid 2px;    
+    
+                }
+
+                .img_act2 {
+                    display: none;
+                }
             }
         }
 
@@ -564,23 +574,25 @@ body {
         padding: 10px;
 
         .fundacion {
-            background-color: #ffff1a;
+            background-color: green;
             display: grid;
             grid-template-columns: 18rem 2fr;
-            grid-template-rows: 30px 1fr;
+            grid-template-rows: 50px 1fr;
             border-radius: 25px;
             margin: 20px 30px;
             padding: 15px;
 
             & h2 {
-                font-family: $font-encabezado;
+                font-family: $font-titulo;
                 grid-column: 1/3;
                 grid-row: 1/2;
                 text-align: center;
                 justify-self: center;
                 align-self: center;
-                margin-top: 25px;
+                margin: 25px auto;
                 text-decoration: underline;
+                color: white;
+                font-size: 45px;
             }
 
             & p {
@@ -590,9 +602,10 @@ body {
                 grid-row: 2/3;
                 font-family: $font-body;
                 color: black;
-                padding: 25px;
-                font-size: 25px;
+                padding: 20px;
+                font-size: 20px;
                 text-align: justify;
+                margin: 0;
             }
 
             & img {
@@ -600,30 +613,32 @@ body {
                 justify-self: center;
                 grid-column: 1/2;
                 grid-row: 2/3;
-                width: 15rem;
+                width: 12rem;
                 border-radius: 10px;
                 border: black solid 2px;
             }
         }
         .actividad {
-            background-color: #ff9900;
+            background-color: green;
             display: grid;
-            grid-template-columns: 2fr 30rem;
-            grid-template-rows: 20px 1fr;
+            grid-template-columns: 3fr;
+            grid-template-rows: 50px 1fr 330px;
             border-radius: 25px;
             margin: 20px 30px;
             padding: 10px;
 
             & h2 {
-                font-family: $font-encabezado;
+                font-family: $font-titulo;
                 grid-column: 1/3;
                 grid-row: 1/2;
                 text-align: center;
                 justify-self: center;
                 align-self: center;
-                margin-top: 25px;
+                margin: 25px auto;
                 margin-bottom: 15px;
                 text-decoration: underline;
+                color:white;
+                font-size: 45px;
             }
 
             & p {
@@ -631,23 +646,31 @@ body {
                 grid-row: 2/3;
                 font-family: $font-body;
                 color: black;
-                padding: 25px;
-                font-size: 25px;
+                padding: 20px;
+                font-size: 20px;
                 text-align: justify;
                 align-self: center;
                 justify-self: center;
+                margin: 0;
 
             }
 
             & img {
-                align-self: center;
-                justify-self: center;
-                grid-column: 2/3;
-                grid-row: 2/3;
                 width: 30rem;
                 height: 20rem;
                 border-radius: 10px;
                 border: black solid 2px;
+            }
+
+            .img {
+                grid-column: 1/2;
+                grid-row: 3/4;
+                align-self: center;
+                justify-self: center;
+
+                .img_act2 {
+                    margin-left: 20px;
+                }
             }
         }
 
